# sppr

./: .gitignore  CMakeLists.txt  build_n_run.sh  main.cpp
data/: dacha.txt  ecology.txt  family.txt  housecoef.txt  iac_1_file_type.txt  iac_2_com.txt  iac_3_noagent.txt  iac_4_iden.txt  iac_5_doc.txt  iac_names.txt  iac_power.txt  lada_names.txt  lada_power.txt  medicine.txt  native_vault.txt  odom.txt  orch_1_using.txt  orch_2_com.txt  orch_3_scaling.txt  orch_5_doc.txt  orch_6_ui.txt  orch_names.txt  orch_power.txt  power.txt  price.txt  salary.txt  year.txt
doc/: lada  report.odt  tomilin_sppr.docx
